openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: intflow-service
  labels:
    app: intflow-service
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: intflow-service
  type: ClusterIP
