openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: intflow-service
  labels:
    app: intflow-service
    version: "${APP_VERSION}"
    environment: "${APP_ENVIRONMENT}"
spec:
  host: intflow-service-${APP_VERSION}-${APP_ENVIRONMENT}.apps.crc.testing.com
  to:
    kind: Service
    name: intflow-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
